--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,9 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
+      <%= f.label :image %>
+　　   <%= f.file_field :image %> 
+
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
