--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,13 @@
     <section>
       <%= render 'shared/stats' %>
     </section>
+    <section>
+    　<% if @user.image? %>
+　　    <%= image_tag @user.image.thumb.url %>
+　    <% else %>
+　　    <%= image_tag 'noimage.gif' %>
+　    <% end %>
+    </section>
   </aside>
   <div class="span8">
     <%= render 'follow_form' if signed_in? %>
